# project-arca

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_server.py
.github/workflows/: deploy.yml  pages.yml
arca/: __init__.py  app.py
arca/cli/: __init__.py  commands.py
arca/components/: __init__.py  detail_view.py  edit_form.py  layout.py  list_view.py
arca/content/articles/: case_study_acme_corp.md  getting_started.md  introduction.md
arca/content/pages/: about.md  contact.md
arca/content/project_arca/: plan.md
arca/content/projects/: project-gamma.md  project_alpha.md  project_beta.md
arca/content/system/: config.md  roles.md
arca/content/tasks/: design_ui_components.md  implement_file_watcher.md  implement_search_functionality.md
arca/content/users/: jane_smith.md  john_doe.md
arca/core/: __init__.py  db.py  manager.py  parser.py  watcher.py
arca/data/: __init__.py  manager.py
demo/: 404.html  index.html  main.py  serve.py  sw.js
etc/: TROUBLESHOOTING.md  design_system.md  htmx.md
