[project]
name = "arca"
version = "0.1.0"
description = "A lightweight CMS using FastHTML and Markdown/YAML files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-fasthtml>=0.12.1",
    "pyyaml>=6.0.1",
    "markdown>=3.6.7",
    "python-frontmatter>=1.0.0",
    "watchdog>=2.2.1",
    "pydantic>=2.10.2",
]

[project.scripts]
arca = "arca.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.2",
]
